syntax = "proto3";
package PapanChannel;

import "game-info.proto";

message GetAvailableGames { }

message AvailableGames {
  map<string, Papan.GameInfo> games = 1;
}

enum LobbyConnectionStatusEnum {
  UNKNOWN = 0;
  NOTCONNECTED = 1;
  STARTINGLOBBY = 2;
  CONNECTING = 3;
  AUTHENTICATING = 4;
  CONNECTED = 5;
}

message GetLobbyConnectionStatus {}

message LobbyConnectionStatus {
  LobbyConnectionStatusEnum status = 1;
}

message ConnectToLobbyServer {
  bool connectLocal = 1 [default = false];
  string lobbyServer = 2 [default = "lobby.papan.online"];
  uint32 lobbyServerPort = 3 [default = 9999];
  bool useLocalCA = 4 [default = true];
}

message LocalServerIP {
  string ip = 1;
}